  - refactor StationTable _report_gaps to create _find_gaps
  - add quality % column to missing data reporting, and related improvements
  - for API use, provided an optional parameter to StationTable::load_stations to receive the station text
  - corrected some API POD related to the now defunct user_options and profile_options hashes in set_options
  - add ghcn_cache script for cache maintenance


v0.0.010       2022-11-10
  - moved EXAMPLES POD from Fetch.pm to ghch_fetch
  - fixed: user prompt when stations found > 100 
  - fixed: broken URL in exported KML

v0.0.009       2022-10-23
  - fix Options::get_getopt_list so it handles aliases properly
  - require version 1.32 of Time::Piece so truncate is supported
  - fix the logic in get_getopt_list that unwinds Tk_opt_table

v0.0.008       2022-10-18
  - added keyword parameter stdin (=> 0) to App::Fetch so station ids from stdin can be disabled in unit tests
  - fixed a bug causing unit tests to fail because command-line option variables weren't being reset
  - added GitHub Actions configuration from Gabor Szabo, for CI testing
  - added t\ghcn_cache to the git repository
  - made filepaths for -profile and -cachedir relative to the current working directory
  - fix -report stn and -report id so only the selected stations are reported

v0.0.007       2022-10-17
  - removed the file extension in the bin scripts for proper Windows and *nix deployment
  - replaced -kml <file> with -report kml and user-directed stdout
  - added #!/usr/bin/perl to ghch_fetch.pl
  - added report types kml, id (just station id's), stn (station tsv only), url, curl
  - renamed -color to -kmlcolor
  - removed -label
  - (hopefully) fixed "Failed test -help at t/91_ghcn_fetch.t" caused when PERLDOC=-MPod::Perldoc::ToTextOverstrike
  
v0.0.006       2022-10-16
  - fix for ticket 144693 "Can't open ghcn_fetch"
  - fixes for test failures in CacheURI.t arising on systems without internet access


v0.0.005       2022-10-09