@@ -7,7 +7,11 @@ v0.0.011       ????-??-??
   - add quality % column to missing data reporting, and related improvements
   - for API use, provided an optional parameter to StationTable::load_stations to receive the station text
   - corrected some API POD related to the now defunct user_options and profile_options hashes in set_options
-  - add ghcn_cache script for cache maintenance
+  - eliminated multiple declarations of $PROFILE_FILE
+  - moved _get_profile_options and _get_profile_filespec from StationTable to Options
+  - renamed _get_profile_options and _get_profile_filespec to get_profile_options and get_profile_filespec
+  - moved testing of get_profile_options and get_profile_filespec from 22 to 14_options.t
+  - added ghcn_cache script for cache maintenance
 
 
 v0.0.010       2022-11-10
